--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   web:
-    image: "dineshverma877/flask:flask"
+    image: "amolkadwe/flaskapp"
     ports:
     - "8000:5000"
   redis:
