--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: "3.3"
+version: '3'
 services:
   web:
-    image: web
     build: .
     ports:
-      - "8000:5000"
-  redis:
+     - "5000:5000"
+  mydb:
     image: "redis:alpine"
