--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
-version: '3'
+version: "3.3"
 services:
   web:
     build: .
     ports:
-     - "8000:5000"
-  mydb:
+      - "5000:5000"
+    volumes:
+      - .:/code
+    environment:
+      FLASK_DEBUG: "true"
+  redis:
     image: "redis:alpine"
