--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -4,5 +4,9 @@ services:
     image: "amolkadwe/flaskapp"
     ports:
     - "8000:5000"
+    deploy:
+      replicas: 2
   redis:
     image: "redis:alpine"
+    deploy:
+      replicas: 2
